--- a/attempt.css
+++ b/attempt.css
@@ -547,6 +547,10 @@ div.about-me-context {
     #skill-name-box {
         margin-top: 25vh;
     }
+    p.my-skills {
+        backdrop-filter: none;
+        background: rgba(255, 255, 255, 0.8)
+    }
     div.skill-info-popover {
         top: 50%;
         left: 50%;
