--- a/attempt.css
+++ b/attempt.css
@@ -396,6 +396,22 @@ div.box {
     left: 0;
     z-index: 10;
 }
+#hint {
+    margin: 0 auto;
+    height: 40vhpx;
+    max-width: 488px;
+    display: flex;
+    justify-content: center;
+    align-items:flex-start;
+    align-content: flex-start;
+    flex-wrap: wrap;
+    padding: 8px;
+    background: #e7e7f0;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    font-family: 'Nunito', sans-serif;
+    z-index: 40;
+}
 div.skill-row1 {
     
     margin: 0 auto;
@@ -416,36 +432,6 @@ div.skill-row1 {
     /*flex-shrink: 3;*/
     /*justify-content: center;*/
     padding: 8px;
-    background: #e7e7f0;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    font-family: 'Nunito', sans-serif;
-    
-    z-index: 40;
-    
-}
-
-
-div.skill-row {
-    position: relative;
-    top: 15vh;
-   /*width: 80%;
-    padding-bottom: 20px;
-    padding-right: 100px;
-    /*margin-top: 10%;*/
-    max-height: 50vh;
-    max-width:488px;
-    /*margin-right: 30px;*/
-    display: flex;
-    /*background-image: linear-gradient(#feffef, #ffe7f1);*/
-    /*height: 50vh;*/
-    justify-content: center;
-    align-items:flex-start;
-    align-content: flex-start;
-    flex-wrap: wrap;
-    /*flex-shrink: 3;*/
-    /*justify-content: center;*/
-    padding-top: 15px;
     background: #e7e7f0;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
@@ -574,7 +560,7 @@ div.progress-bar {
     /*margin-left: 25px;*/
 }
 #skill-context {
-    height: 50%;
+    height: 55%;
     font-family:'Nunito', sans-serif;
     font-size: 1.5rem;
     padding: 10px;
@@ -776,7 +762,7 @@ div.contact-container a {
         background: none;
     }
     #skill-context {
-        height: 30%;
+        height: 50%;
     }
     /*div.contact-container-main {
         height: auto;
@@ -785,6 +771,7 @@ div.contact-container a {
         flex-direction: row;
     }
     div.skill-info-popover {
+        min-height: 350px;
         margin: 0 auto;
     }
 }
