--- a/attempt.css
+++ b/attempt.css
@@ -462,6 +462,9 @@ p.my-skills {
     margin-top: 30px;
     width: 100%;
 }
+#btn-container a{
+    text-decoration: none;
+}
 input.cv-btn {
     display: block;
     margin: 0 auto;
